# SnakeClone

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SnakeClone.sln  SnakeClone.vcxproj  SnakeClone.vcxproj.filters
include/: food.h  game.h  snake.h
src/: food.cpp  game.cpp  main.cpp  snake.cpp
